--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -74,99 +74,555 @@
      "text": [
       "Karin_Viard_1 :\n",
       "\n",
-      "tp:  79  fp:  0 fn:  0\n",
+      "tp:  38  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
       "Recall:  1.0\n",
       "F1:  1.0\n",
       "\n",
-      "tp:  42  fp:  0 fn:  37\n",
+      "tp:  13  fp:  0 fn:  25\n",
       "Precision:  1.0\n",
-      "Recall:  0.53\n",
-      "F1:  0.69\n",
+      "Recall:  0.34\n",
+      "F1:  0.51\n",
       "\n",
       "Modified:\n",
       "\n",
-      "tp:  79  fp:  0 fn:  0\n",
+      "tp:  38  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
       "Recall:  1.0\n",
       "F1:  1.0\n",
       "\n",
-      "tp:  42  fp:  0 fn:  37\n",
+      "tp:  13  fp:  0 fn:  25\n",
       "Precision:  1.0\n",
-      "Recall:  0.53\n",
-      "F1:  0.69\n",
+      "Recall:  0.34\n",
+      "F1:  0.51\n",
       "\n",
       "Kate_Winslet_1 :\n",
       "\n",
-      "tp:  240  fp:  0 fn:  0\n",
+      "tp:  9  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
       "Recall:  1.0\n",
       "F1:  1.0\n",
       "\n",
-      "tp:  240  fp:  0 fn:  0\n",
+      "tp:  9  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
       "Recall:  1.0\n",
       "F1:  1.0\n",
       "\n",
       "Modified:\n",
       "\n",
-      "tp:  240  fp:  0 fn:  0\n",
+      "tp:  9  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
       "Recall:  1.0\n",
       "F1:  1.0\n",
       "\n",
-      "tp:  240  fp:  0 fn:  0\n",
+      "tp:  9  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
       "Recall:  1.0\n",
       "F1:  1.0\n",
       "\n",
       "Katharine_Hepburn_3 :\n",
       "\n",
-      "tp:  104  fp:  0 fn:  4\n",
+      "tp:  8  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
-      "Recall:  0.96\n",
-      "F1:  0.98\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
       "\n",
-      "tp:  104  fp:  0 fn:  4\n",
+      "tp:  8  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
-      "Recall:  0.96\n",
-      "F1:  0.98\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
       "\n",
       "Modified:\n",
       "\n",
-      "tp:  104  fp:  0 fn:  4\n",
+      "tp:  8  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
-      "Recall:  0.96\n",
-      "F1:  0.98\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
       "\n",
-      "tp:  104  fp:  0 fn:  4\n",
+      "tp:  8  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
-      "Recall:  0.96\n",
-      "F1:  0.98\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
       "\n",
       "Kathryn_Morris_5 :\n",
       "\n",
-      "tp:  43  fp:  0 fn:  0\n",
+      "tp:  4  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
       "Recall:  1.0\n",
       "F1:  1.0\n",
       "\n",
-      "tp:  43  fp:  0 fn:  0\n",
+      "tp:  4  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
       "Recall:  1.0\n",
       "F1:  1.0\n",
       "\n",
       "Modified:\n",
       "\n",
-      "tp:  43  fp:  0 fn:  0\n",
+      "tp:  4  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
       "Recall:  1.0\n",
       "F1:  1.0\n",
       "\n",
-      "tp:  43  fp:  0 fn:  0\n",
+      "tp:  4  fp:  0 fn:  0\n",
       "Precision:  1.0\n",
       "Recall:  1.0\n",
       "F1:  1.0\n",
+      "\n",
+      "Keith_Tyson_1 :\n",
+      "\n",
+      "tp:  7  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  7  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  7  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  7  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Kemal_Dervis_1 :\n",
+      "\n",
+      "tp:  6  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  6  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  6  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  6  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Kenneth_Branagh_3 :\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Kevin_Borseth_2 :\n",
+      "\n",
+      "tp:  15  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  15  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  15  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  15  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Kevin_Spacey_1 :\n",
+      "\n",
+      "tp:  12  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  12  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  12  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  12  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Kieran_Culkin_1 :\n",
+      "\n",
+      "tp:  6  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  6  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  6  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  6  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Kirk_Ferentz_0 :\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Kit_Bond_5 :\n",
+      "\n",
+      "tp:  13  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  13  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  13  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  13  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Krishna_Bhadur_Mahara_5 :\n",
+      "\n",
+      "tp:  8  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  8  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  8  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  8  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Kweisi_Mfume_1 :\n",
+      "\n",
+      "tp:  10  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  10  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  10  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  10  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Larry_Brown_1 :\n",
+      "\n",
+      "tp:  18  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  18  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  18  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  18  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Laura_Flessel_0 :\n",
+      "\n",
+      "tp:  7  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  7  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  7  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  7  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Laurence_Fishburne_2 :\n",
+      "\n",
+      "tp:  14  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  14  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  14  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  14  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Lesia_Burlak_2 :\n",
+      "\n",
+      "tp:  30  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  0  fp:  0 fn:  30\n",
+      "Precision:  0\n",
+      "Recall:  0.0\n",
+      "F1:  0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  30  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  0  fp:  0 fn:  30\n",
+      "Precision:  0\n",
+      "Recall:  0.0\n",
+      "F1:  0\n",
+      "\n",
+      "Leuris_Pupo_2 :\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Linda_Dano_2 :\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  9  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Linda_Lingle_4 :\n",
+      "\n",
+      "tp:  17  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  17  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  17  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  17  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Lino_Oviedo_3 :\n",
+      "\n",
+      "tp:  240  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  0  fp:  0 fn:  240\n",
+      "Precision:  0\n",
+      "Recall:  0.0\n",
+      "F1:  0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  240  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  0  fp:  0 fn:  240\n",
+      "Precision:  0\n",
+      "Recall:  0.0\n",
+      "F1:  0\n",
+      "\n",
+      "Lino_Oviedo_5 :\n",
+      "\n",
+      "tp:  119  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  0  fp:  0 fn:  119\n",
+      "Precision:  0\n",
+      "Recall:  0.0\n",
+      "F1:  0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  119  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  0  fp:  0 fn:  119\n",
+      "Precision:  0\n",
+      "Recall:  0.0\n",
+      "F1:  0\n",
       "\n"
      ]
     },
@@ -177,16 +633,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 118\u001b[0m\n\u001b[0;32m    116\u001b[0m         q \u001b[39m=\u001b[39m landmarks\u001b[39m.\u001b[39mpart(n)\u001b[39m.\u001b[39my\n\u001b[0;32m    117\u001b[0m         pred_values1\u001b[39m.\u001b[39mappend([p, q])\n\u001b[1;32m--> 118\u001b[0m         cv2\u001b[39m.\u001b[39;49mcircle(img1, (p, q), \u001b[39m1\u001b[39;49m, (\u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m), \u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[0;32m    119\u001b[0m     \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m    122\u001b[0m \u001b[39m#Cascade Classifier Blurred\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[17], line 169\u001b[0m\n\u001b[0;32m    167\u001b[0m x1b, y1b, x2b, y2b \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m    168\u001b[0m \u001b[39m#DLIB blurred\u001b[39;00m\n\u001b[1;32m--> 169\u001b[0m faces4 \u001b[39m=\u001b[39m detector(gray4)\n\u001b[0;32m    170\u001b[0m \u001b[39mfor\u001b[39;00m face \u001b[39min\u001b[39;00m faces4:\n\u001b[0;32m    171\u001b[0m     landmarks \u001b[39m=\u001b[39m predictor(gray4, face)\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -197,6 +645,7 @@
     "import pathlib\n",
     "import dlib\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "import math\n",
     "\n",
     "# Load the face detection model\n",
     "detector = dlib.get_frontal_face_detector()\n",
@@ -231,7 +680,8 @@
     "rec = \"\"\n",
     "prec_max = 0\n",
     "rec_max = 0\n",
-    "\n",
+    "min_mse = 100000\n",
+    "name_mse = \"\"\n",
     "\n",
     "dir = \"./smaller-data\"\n",
     "for filename in os.listdir(dir):\n",
@@ -395,6 +845,9 @@
     "            # print('CC IOU: ', iou)\n",
     "\n",
     "            mse = mean_squared_error(true_values, pred_values1)\n",
+    "            if(mse < min_mse):\n",
+    "                min_mse = mse\n",
+    "                name_mse = name\n",
     "            mse_str = f'CC MSE: {mse:.2f}'\n",
     "            cv2.putText(img1, mse_str, position2, font, 0.25, (0, 0, 0), 1, cv2.LINE_AA)\n",
     "\n",
@@ -415,6 +868,9 @@
     "            # print('CC IOU: ', iou)\n",
     "\n",
     "            mse = mean_squared_error(true_values, pred_values3)\n",
+    "            if(mse < min_mse):\n",
+    "                min_mse = mse\n",
+    "                name_mse = name\n",
     "            mse_str = f'CC MSE: {mse:.2f}'\n",
     "            cv2.putText(img3, mse_str, position2, font, 0.25, (0, 0, 0), 1, cv2.LINE_AA)\n",
     "\n",
@@ -436,6 +892,9 @@
     "            # print('CC IOU: ', iou)\n",
     "\n",
     "            mse = mean_squared_error(true_values, pred_values2)\n",
+    "            if(mse < min_mse):\n",
+    "                min_mse = mse\n",
+    "                name_mse = name\n",
     "            mse_str = f'DLIB MSE: {mse:.2f}'\n",
     "            cv2.putText(img2, mse_str, position2, font, 0.25, (0, 0, 0), 1, cv2.LINE_AA)\n",
     "\n",
@@ -457,6 +916,9 @@
     "            # print('CC IOU: ', iou)\n",
     "\n",
     "            mse = mean_squared_error(true_values, pred_values4)\n",
+    "            if(mse < min_mse):\n",
+    "                min_mse = mse\n",
+    "                name_mse = name\n",
     "            mse_str = f'DLIB MSE: {mse:.2f}'\n",
     "            cv2.putText(img4, mse_str, position2, font, 0.25, (0, 0, 0), 1, cv2.LINE_AA)\n",
     "\n",
@@ -500,7 +962,8 @@
     "results(tp3, fp3, fn3)\n",
     "results(tp4, fp4, fn4)\n",
     "print(\"Lowest recall: \", prec)\n",
-    "print(\"Lowest precission: \", rec)"
+    "print(\"Lowest precission: \", rec)\n",
+    "print(\"Lowest MSE:\", name_mse)"
    ]
   },
   {
